force-app/main/default/objects/POPSA__c/POPSA__c.object-meta.xml
<CustomObject>
    <description>The agenda and minutes required for any Face to Face meeting</description>
    <label>POPSA</label>
    <nameField>
        <label>POPSA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POPSAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>