force-app/main/default/objects/POPSA__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account this visit report relates to</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POPSAs</relationshipLabel>
    <relationshipName>POPSAs</relationshipName>
    <type>Lookup</type>
</CustomField>