force-app/main/default/objects/POPSA__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Make parent field value available in merge fields for custom buttons</description>
    <formula>Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>