force-app/main/default/objects/POPSA__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>Contact_Name__r.MailingStreet  &amp;  BR()  &amp;  Contact_Name__r.MailingCity &amp; BR() &amp;  Contact_Name__r.MailingState &amp; BR()  &amp;  Contact_Name__r.MailingCountry &amp; BR() &amp;  Contact_Name__r.MailingPostalCode</formula>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>