force-app/main/default/objects/POPSA__c/fields/CurrencyHCDM__c.field-meta.xml
<CustomField>
    <fullName>CurrencyHCDM__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BGN-Bulgarian Lev</fullName>
            </value>
            <value>
                <fullName>CHF-Swiss Franc</fullName>
            </value>
            <value>
                <fullName>CZK-Czech Koruna</fullName>
            </value>
            <value>
                <fullName>DKK-Danish Krone</fullName>
            </value>
            <value>
                <fullName>EUR-Euro</fullName>
            </value>
            <value>
                <fullName>GBP-British Pound</fullName>
            </value>
            <value>
                <fullName>HUF-Hungarian Forint</fullName>
            </value>
            <value>
                <fullName>PLN-Polish Zloty</fullName>
            </value>
            <value>
                <fullName>RUB-Russian Rouble</fullName>
            </value>
            <value>
                <fullName>TRY-Turkish Lira (New)</fullName>
            </value>
            <value>
                <fullName>ZAR-South African Rand</fullName>
            </value>
            <value>
                <fullName>USD-US Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>