force-app/main/default/objects/POPSA__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer - New Business</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Renewal</fullName>
            </value>
            <value>
                <fullName>Existing Customer - New Business</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Existing Business</fullName>
            </value>
            <value>
                <fullName>Price Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>