force-app/main/default/objects/POPSA__c/fields/Existing_SFDC_Id__c.field-meta.xml
<CustomField>
    <fullName>Existing_SFDC_Id__c</fullName>
    <externalId>true</externalId>
    <label>Existing SFDC Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>