force-app/main/default/objects/POPSA__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>POPSAs</relationshipLabel>
    <relationshipName>POPSAs</relationshipName>
    <type>Lookup</type>
</CustomField>