force-app/main/default/objects/POPSA__c/fields/POPSA__c.field-meta.xml
<CustomField>
    <fullName>POPSA__c</fullName>
    <label>POPSA</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>