force-app/main/default/objects/POPSA__c/fields/POPSA_Complete__c.field-meta.xml
<CustomField>
    <fullName>POPSA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POPSA Complete</label>
    <type>Checkbox</type>
</CustomField>